<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".recruiters.CreateJobFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/s48"
                android:background="@color/app_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/s34"
                    android:layout_height="@dimen/s48"
                    android:layout_marginStart="@dimen/s8"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/s8" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/s200"
                android:layout_height="@dimen/s200"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginTop="@dimen/s12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_title_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginTop="@dimen/s8"
                android:layout_marginEnd="@dimen/s34"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_enter_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginTop="@dimen/s8"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_title_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_description_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginTop="@dimen/s8"
                android:layout_marginEnd="@dimen/s34"
                app:endIconDrawable="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_enter_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_enter_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginTop="@dimen/s8"
                android:text="@string/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_description_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_location_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginTop="@dimen/s8"
                android:layout_marginEnd="@dimen/s34"
                app:endIconDrawable="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_enter_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_location"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s54"
                android:layout_marginTop="@dimen/s45"
                android:layout_marginEnd="@dimen/s54"
                android:layout_marginBottom="@dimen/s60"
                android:background="@drawable/curvedback"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                app:cardElevation="@dimen/s0"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_location_layout">

                <TextView
                    android:id="@+id/txt_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:padding="16dp"
                    android:text="@string/post_job"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>