<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".common.LoginFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/s150"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_top"
                android:layout_width="@dimen/s200"
                android:layout_height="@dimen/s200"
                android:layout_marginTop="@dimen/s4"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />




            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginTop="@dimen/s8"
                android:text="@string/enter_your_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_top" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s8"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginEnd="@dimen/s34"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_enter_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginTop="@dimen/s8"
                android:text="@string/enter_your_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_pass_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s34"
                android:layout_marginLeft="@dimen/s34"
                android:layout_marginEnd="@dimen/s34"
                android:layout_marginTop="@dimen/s8"
                app:passwordToggleEnabled="true"
                app:endIconDrawable="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_enter_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s54"
                android:layout_marginTop="@dimen/s45"
                android:layout_marginEnd="@dimen/s54"
                android:layout_marginBottom="@dimen/s60"
                android:background="@drawable/curvedback"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                app:cardElevation="@dimen/s0"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_pass_layout">

                <TextView
                    android:id="@+id/txt_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s8"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/registeruser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Submit" />



        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>
</layout>